primeros cambios prueba

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ description: "Write an awesome description for your new site here. You can edit 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Contra escritura
   pic: 1
-  position: Lead Designer
+  position: 
   social:
     - title: twitter
       url: #
@@ -20,9 +20,9 @@ people:
     - title: stack-overflow
       url: #
 
-- name: Larry Parker
+- name: Orciny Press
   pic: 2
-  position: Lead Marketer
+  position: 
   social:
     - title: twitter
       url: #
@@ -31,7 +31,7 @@ people:
     - title: linkedin
       url: #
 
-- name: Diana Petersen
+- name: Amor de madre
   pic: 3
   position: Lead Developer
   social:
@@ -45,7 +45,7 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/barriolibros
   - title: facebook
     url:
   - title: stack-overflow
@@ -53,8 +53,7 @@ social:
   - title: bitbucket 
     url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
-
+    url: https://github.com/barriodelibros
 # Postal address (add as many lines as necessary)
 address:
   - line: 3481 Melrose Place
