--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,9 +1,9 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fed136
-  secondary: fec503   
-  secondary-dark: 333
-  muted: 777
+  primary: 555
+  secondary: F8EDE4  
+  secondary-dark: 412D26
+  muted: 555
 
 # Font Families
 font:
