fixing baseurl part three

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://y7kim.github.io
-baseurl: https://barrio-website.github.io/
+baseurl: https://barriodelibros.github.io/
 
 # Site settings
 title: Barrio de libros
