fixing url again

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://y7kim.github.io
-baseurl: https://barriodelibros.github.io/
+url: https://barriodelibros.github.io/
+baseurl: /barrio-website
 
 # Site settings
 title: Barrio de libros
