fixing config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 url: https://barriodelibros.github.io/
-baseurl: /barrio-website
+baseurl: /barrio-website/
+
 
 # Site settings
 title: Barrio de libros
