modified links in config.yaml

--- a/_config.yml
+++ b/_config.yml
@@ -50,10 +50,9 @@ people:
   pic: 5
   position: 
   social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
+    - title: website
+      url: https://menadeseditorial.com/
+  
     
 
 - name: Libros de la Vorágine
