adding logo secc after make it png and trans

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ people:
   website: https://labibliotecadecarfax.com/
     
 
-- name: ENEB
+- name: Esto no es Berlín
   pic: 9
   position: 
   website: 
