--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ people:
 - name: La niña azul
   pic: 7
   position: 
-  website: 
+  website: httpp://barriodelibros.org
     
 
 - name: Carfax
@@ -70,7 +70,7 @@ people:
 
 - name: Aloha
   pic: 11
- position: 
+  position: 
   website: https://insolitaeditorial.com/
 
 - name: Arraigo
@@ -109,7 +109,7 @@ people:
   position: 
   website: https://editorialultramarina.com
 
-  - name: SECC
+- name: SECC
   pic: 19
   position: 
   website: hhttps://edicionssecc.blogspot.com/  
