--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ people:
 - name: La niña azul
   pic: 7
   position: 
-  website: httpp://barriodelibros.org
+  website: http://barriodelibros.org
     
 
 - name: Carfax
@@ -86,7 +86,7 @@ people:
 - name: Horror vacui
   pic: 14
   position: 
-  website: https://horrorvacui.es/
+  website: https://horror-vacui.es/
 
 
 - name: Letraversal
