cambiar marco redondeado para logos, reparar nombre de Carfax

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ people:
   website: http://barriodelibros.org
     
 
-- name: Carfax
+- name: biblioteca de Carfax
   pic: 8
   position: 
   website: https://labibliotecadecarfax.com/
