--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ people:
 - name: La niña azul
   pic: 7
   position: 
-  website: http://barriodelibros.org
+  website: laninaazul.es
     
 
 - name: biblioteca de Carfax
@@ -71,7 +71,7 @@ people:
 - name: Aloha
   pic: 11
   position: 
-  website: https://insolitaeditorial.com/
+  website: https://www.alohaeditorial.com/
 
 - name: Horror vacui
   pic: 14
