add logos arraigo y ultramarina

--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,16 @@ people:
   position: 
   website: hhttps://edicionssecc.blogspot.com/  
 
+- name: Ultramarina
+  pic: 18
+  position: 
+  website: https://editorialultramarina.com/
+
+- name: arraigo
+  pic: 12
+  position: 
+  website: https://lecturasdearraigo.com/ 
+
 
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
