add barbarie && demeter

--- a/_config.yml
+++ b/_config.yml
@@ -78,10 +78,18 @@ people:
   position: 
   website: https://horror-vacui.es/
 
-- name: SECC
-  pic: 19
+- name: Barbarie
+  pic: 20
   position: 
-  website: hhttps://edicionssecc.blogspot.com/  
+  website: https://barbarieeditora.es
+ 
+
+- name: Demeter
+  pic: 21
+  position: 
+  website: hhttps://edicionssecc.blogspot.com/ 
+
+
 
 
 
