add link demeter

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ people:
 - name: Demeter
   pic: 21
   position: 
-  website: hhttps://edicionssecc.blogspot.com/ 
+  website: https://editorialdemeter.es/ 
 
 
 
