add logos y links nuevas ed.

--- a/_config.yml
+++ b/_config.yml
@@ -96,10 +96,20 @@ people:
   position: 
   website: https://editorialultramarina.com/
 
-- name: arraigo
+- name: Arraigo
   pic: 12
   position: 
   website: https://lecturasdearraigo.com/ 
+
+- name: Demeter
+  pic: 13
+  position: 
+  website: https://editorialdemeter.es/ 
+
+- name: Godall
+  pic: 12
+  position: 
+  website: https://godalledicions.cat/es/godall-ediciones/ 
 
 
 
